# hungry-for-research

./: .gitignore  Makefile  README.md  SETUP.md  environment.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/components/: ingest_section.py  qa_section.py
chains/: cli_hybrid_answer.py  cli_hybrid_query.py  cli_query.py  hybrid_answerer.py  hybrid_qa.py  prompts.py  qa_chain_builder.py
common/: config.py  logger.py  neo4j_settings.py  settings.py
config/: config.yaml
data/: urls.txt
graph/: hybrid_context.py  neo4j_client.py
ingestion/: chunkers.py  cleaners.py  cli_build_index.py  document_models.py  fact_extractor_llm.py  hash_utils.py  ingest_pipeline.py  loaders.py
models/: llm.py
notebooks/: workflow_test.ipynb
retrieval/: filters.py  retriever_factory.py
scripts/: test_extraction.py
src/app/: main.py
src/chains/: qa_chain.py
src/ingestion/: pdf_loader.py
src/vectorstore/: faiss_store.py
tests/: test_pipeline.py
vectorstore/: chroma_store.py
