[project]
name = "hungry-for-research"
version = "0.1.0"
description = "A local RAG-powered assistant for research papers"
readme = "README.md"
requires-python = "==3.12"

dependencies = [
    "streamlit",
    "langchain",
    "chromadb",
    "sentence-transformers",
    "pypdf",
    "python-dotenv",
    "ollama", # for local LLMs
    "pytest",
    "langchain-community>=0.3.30",
]

[tool.uv]
dev-dependencies = [
    "ruff",      # linting
    "black",     # formatting
]
